# ExMachina-Agents

./: .gitignore  AGENTS.md  BOOTSTRAP.md  LICENSE  PROMPT.en.md  PROMPT.md  README.en.md  README.md  SOUL.md  TOOLS.md  install.sh  pyproject.toml
.github/ISSUES/: issue_dynamic_workflow.md  issue_memory_integration.md  issue_skill_integration.md
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md
examples/: demo_openclaw_integration.py
exmachina/: BOOTSTRAP.md  QUICKSTART.md  README.md  __init__.py  cli.py  dialogue.py  doctor.py  dynamic_planner.py  exporter.py  manifest.json  memory_integrator.py  models.py  openclaw.settings.json  openclaw.settings.lite.json  planner.py  profile.py  repository.py  runtime.py  skill_manager.py  validator.py  workspace.py
exmachina-en/: README.md  manifest.json  openclaw.settings.json  openclaw.settings.lite.json
exmachina-en/agents/: 00_primary-conductor.md  10_knowledge-link-body.md  11_rationality-link-body.md  12_validation-link-body.md  13_documentation-link-body.md  14_security-link-body.md  15_integration-link-body.md  16_operations-link-body.md  17_research-link-body.md  18_architecture-link-body.md  19_implementation-link-body.md  42_index-body.md  (+40 more)
install/: AGENTS.md  BOOTSTRAP.en.md  BOOTSTRAP.md  INTAKE.en.md  INTAKE.md  SETTINGS.en.md  SETTINGS.md  apply-openclaw-settings.js  intake.template.en.json  intake.template.json
openclaw-pack/: BOOTSTRAP.md  QUICKSTART.md  README.md  manifest.json  openclaw.settings.json
skills/: SKILL.md
src/: pack.js
tests/: test_cli.py  test_doctor.py  test_planner.py  test_workspace.py
(+290 files in other folders)
