[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exmachina"
version = "0.1.0"
description = "ExMachina: rational multi-agent linkage system for OpenClaw"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
exmachina = "exmachina.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exmachina = ["data/*.json", "data/subagents/*.json", "data/conductors/*.json", "data/link_bodies/*.json"]
